base project with nodejs + typescritp + mysql
