# src/books/book.type.ts
@@ -1,0 +1,4 @@
+export interface BookRequest {
+    author: string,
+    title: string
+}
